# cuda13-graph-ai-fraud-detection

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cuda12  Dockerfile.cuda13  LICENSE  LINKEDIN_POST.md  Makefile  PR_DESCRIPTION.md  README.md  pyproject.toml  requirements-cpu.txt  requirements-cuda12.txt  requirements-cuda13.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: cpu_vs_gpu_benchmark.py  model_quality_memory_benchmark.py  results.md
benchmarks/measured/: README.md
docs/: architecture.md  benchmark-execution-matrix.md  cuda-version-support.md  cuda13-migration-notes.md  public-datasets.md  self-hosted-gpu-runner.md
examples/: anomaly_score_gpu.py  elliptic_graph_loader.py  gpu_smoke_test.py  graph_feature_gpu.py  public_creditcard_fraud_gpu.py  pyg_gnn_elliptic_baseline.py  rapids_cugraph_elliptic.py
k8s/: gpu-deployment.yaml
src/: metrics.py
tests/: test_anomaly_score.py  test_benchmark.py  test_benchmark_preprocessing.py  test_cpu_fallback.py  test_creditcard_example.py  test_graph_features.py  test_metrics.py  test_pyg_split.py
