[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda13-graph-fraud-detection"
version = "0.1.0"
description = "Reproducible CPU and CUDA examples for graph-based fraud detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Saurav Singla" }]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "torch>=2.3,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
